--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-# Pritam Majumder
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Pritam Majumder</h1>
+
+<p> Welcome to my webpage </p>
+
+</body>
+</html>
+
