--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <h1>Pritam Majumder</h1>
 
 <p> Welcome to my webpage </p>
+  
+<p>This is another paragraph.</p>
+  
+  
+<h3>Theses
+<a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>
+  
+  <ul>
+  <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a> , IIT Kanpur, 2014</li>
+ 
+</ul>
 
 </body>
 </html>
