--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
 <p> Welcome to my webpage </p>
   
-<p>This is another paragraph.</p>
+<p>I am a graduate student.</p>
   
   
 <h3>Theses
-<a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>
+
   
-  <ul>
+<ul>
   <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a> , IIT Kanpur, 2014</li>
  
 </ul>
