--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <p>I am a graduate student.</p>
   
   
+<h2>Papers  
+  
+  
 <h3>Theses
 
   
 <ul>
-  <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a> , IIT Kanpur, 2014</li>
+  <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>, IIT Kanpur, 2014</li>
  
 </ul>
 
