--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>Pritam Majumder</h1>
 
-<p> Welcome to my webpage </p>
+<p style="font-size:160%;"> Welcome to my webpage </p>
   
 <p>I am a graduate student.</p>
   
@@ -14,7 +14,6 @@
   
 <h2>Theses
 
-  
 <ul>
   <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>, IIT Kanpur, 2014</li>
  
