--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
 
 <p style="font-size:130%;"> Welcome to my webpage </p>
   
-<p>I am a graduate student.</p>
+<p style="font-size:130%;">I am a graduate student.</p>
   
   
 <h2>Papers  
   
+  <ul>
+    <li> paper </li>
+  </ul>  
+  
   
 <h2>Theses
-
-<ul>
+  <ul>
   <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>, IIT Kanpur, 2014</li>
  
-</ul>
+  </ul>
 
 </body>
 </html>
