--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <p style="font-size:130%;">I am a graduate student.</p>
   
   
-<h2>Papers  
+  <h2>Papers</h2>  
   
   <ul>
     <li> paper </li>
   </ul>  
   
   
-<h2>Theses
+  <h2>Theses</h2>
   <ul>
   <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>, IIT Kanpur, 2014</li>
  
