--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <h2>Theses</h2>
   <ul>
-  <li><a href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>, IIT Kanpur, 2014</li>
+  <li><a style="font-size:130%;" href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>, IIT Kanpur, 2014</li>
  
   </ul>
 
