--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <h2>Papers</h2>  
   
   <ul>
-    <li style="font-size:130%;"> paper </li>
+    <li style="font-size:130%;"> An elementary proof of a power series identity for the weighted sum of all finite abelian p-groups, <a  href="https://arxiv.org/abs/1407.3066">Uniqueness of Factorization in Quadratic Fields</a> </li>
   </ul>  
   
   
   <h2>Theses</h2>
   <ul>
-  <li><a style="font-size:130%;" href="https://pritam-m.github.io/majumder-2014.pdf">M.Sc. Thesis</a>, IIT Kanpur, 2014</li>
+  <li style="font-size:130%;"><a  href="https://pritam-m.github.io/majumder-2014.pdf">Uniqueness of Factorization in Quadratic Fields</a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
  
   </ul>
 
