--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h2>Papers</h2>  
   
   <ul>
-    <li style="font-size:130%;"> An elementary proof of a power series identity for the weighted sum of all finite abelian p-groups, <a  href="https://arxiv.org/abs/1407.3066">Uniqueness of Factorization in Quadratic Fields</a> </li>
+    <li style="font-size:130%;"> An elementary proof of a power series identity for the weighted sum of all finite abelian p-groups, <a  href="https://arxiv.org/abs/1407.3066">arXiv</a> </li>
   </ul>  
   
   
