--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <h2>Theses</h2>
   <ul>
-  <li style="font-size:130%;"><a  href="https://pritam-m.github.io/majumder-2014.pdf">Uniqueness of Factorization in Quadratic Fields</a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
+  <li style="font-size:130%;"><a  href="https://majumder-pritam.github.io/majumder-2014.pdf">Uniqueness of Factorization in Quadratic Fields</a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
  
   </ul>
 
