--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
 
 <h1>Pritam Majumder</h1>
 
-<p style="font-size:130%;"> Welcome to my webpage </p>
   
-<p style="font-size:130%;">I am a graduate student.</p>
+<p style="font-size:130%;">Graduate student at <a  href="www.tifr.res.in"><Tata Institute of Fundamental Research </a>. Did undergraduate studies at IIT Kanpur (2009-2014).</p>
   
   
   <h2>Papers</h2>  
   
   <ul>
-    <li style="font-size:130%;"> An elementary proof of a power series identity for the weighted sum of all finite abelian p-groups, <a  href="https://arxiv.org/abs/1407.3066">arXiv</a> </li>
+    <li style="font-size:130%;"> <em>Line graphs of k-uniform hypergraphs<em> (with A. Bhattacharya, A. Godinho and N. M. Singhi), in preperation
+    <li style="font-size:130%;"> <em>Alternating reachability (with A. Bhattacharya, U. N. Peled and M. K. Srinivasan), in preperation
+    <li style="font-size:130%;"> <em>An elementary proof of a power series identity for the weighted sum of all finite abelian p-groups</em>, <a  href="https://arxiv.org/abs/1407.3066">arXiv</a> </li>
   </ul>  
   
   
   <h2>Theses</h2>
   <ul>
-  <li style="font-size:130%;"><a  href="https://majumder-pritam.github.io/majumder-2014.pdf">Uniqueness of Factorization in Quadratic Fields</a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
+  <li style="font-size:130%;"> Two problems in combinatorics, PhD Thesis, TIFR, in process    
+  <li style="font-size:130%;"><em> <a  href="https://majumder-pritam.github.io/majumder-2014.pdf"></em>Uniqueness of factorization in quadratic fields</a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
  
   </ul>
 
