--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Pritam Majumder</h1>
 
   
-<p style="font-size:130%;">Graduate student at <a  href="www.tifr.res.in"><Tata Institute of Fundamental Research </a>. Did undergraduate studies at IIT Kanpur (2009-2014).</p>
+<p style="font-size:130%;">Graduate student at <a  href="www.tifr.res.in">Tata Institute of Fundamental Research </a>. Did undergraduate studies at <a  href="www.iitk.ac.in">IIT Kanpur</a> (2009-2014).</p>
   
   
   <h2>Papers</h2>  
