--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 <p style="font-size:130%;">Graduate student at <a  href="https://www.tifr.res.in">Tata Institute of Fundamental Research </a>. Did undergraduate studies at <a  href="https://www.iitk.ac.in">IIT Kanpur</a> (2009-2014).</p>
  
-<p style="font-size:130%;"  Research interests include Enumerative, Algebraic, and Geometric Combinatorics.
+<p style="font-size:130%;"  Research interests include Enumerative, Algebraic, and Geometric Combinatorics. </p>
   
   <h2>Papers</h2>  
   
