--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <h2>Theses</h2>
   <ul>
-  <li style="font-size:130%;"> Two problems in combinatorics, PhD Thesis, TIFR, in process    
+    <li style="font-size:130%;"> <em>Two problems in combinatorics</em>, PhD Thesis, TIFR, in process    
   <li style="font-size:130%;"><em> <a  href="https://majumder-pritam.github.io/majumder-2014.pdf"></em>Uniqueness of factorization in quadratic fields</a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
  
   </ul>
