--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 <p style="font-size:130%;">Graduate student at <a  href="https://www.tifr.res.in">Tata Institute of Fundamental Research </a>. Did undergraduate studies at <a  href="https://www.iitk.ac.in">IIT Kanpur</a> (2009-2014).</p>
  
-<p style="font-size:130%;"  Research interests include Enumerative, Algebraic, and Geometric Combinatorics. </p>
+<p style="font-size:130%;">Research interests include Enumerative, Algebraic, and Geometric Combinatorics. </p>
   
   <h2>Papers</h2>  
   
@@ -21,7 +21,7 @@
   <h2>Theses</h2>
   <ul>
     <li style="font-size:130%;"> <em>Two problems in combinatorics</em>, PhD Thesis, TIFR, in process    
-  <li style="font-size:130%;"><em> <a  href="https://majumder-pritam.github.io/majumder-2014.pdf"></em>Uniqueness of factorization in quadratic fields</a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
+  <li style="font-size:130%;"><a  href="https://majumder-pritam.github.io/majumder-2014.pdf"><em>Uniqueness of factorization in quadratic fields</em></a>, M.Sc. Thesis, IIT Kanpur, 2014</li>
  
   </ul>
 
