--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+ <!DOCTYPE html>
+<html>
+<body>
+
+<h1>Pritam Majumder</h1>
+  <h3>Photography</h3>
+<p>My first paragraph.</p>
+
+</body>
+</html> 
