--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-abcdefgh
+ <!DOCTYPE html>
+<html>
+<body>
+
+<h1>My Pritam Majumder</h1>
+  <h3>Photography</h3>
+<p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a> </p>
+  <p>500px:  <a href="https://500px.com/pritamaj.in">profile</a> </p>
+
+  <h3>Mathematics</h3>
+
+</body>
+</html> 
