--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <body>
 
 <h1>My Pritam Majumder</h1>
-  <h3>Photography</h3>
-<p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a> </p>
-  <p>500px:  <a href="https://500px.com/pritamaj.in">profile</a> </p>
+  <h2>Photography</h2>
 
-  <h3>Mathematics</h3>
+  <p><a href="https://500px.com/pritamaj">500px profile</a> (complete photographic work) </p>
+  <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a> (selected photos) </p>
 
+  <h2>Mathematics</h2>
+
+  <p><a href="https://mathoverflow.net/users/23980/pritam-majumder">MathOverflow profile</a> </p>
+  <h3>Research works:</h3>
+  
+ <p> Curves, points, incidences and covering (<a href="https://majumder-pritam.github.io/covering23.pdf">pdf</a>)</p>
+  
+ <p> An elementary proof of a power series identity for the weighted sum of all finite abelian p-groups (<a href="https://arxiv.org/abs/1407.3066">arXiv</a>)</p>
+
+ <p>Two Problems in Combinatorics (Ph.D. thesis, <a href="https://majumder-pritam.github.io/th20.pdf">pdf</a> )</p>
+
+ <p>Uniqueness of Factorization in Quadratic Fields (Master's thesis, <a href="http://www.cse.iitk.ac.in/users/nitin/theses/majumder-2014.pdf">pdf</a>)</p>
+
+
+ <p>[contact@google-mail: my_500px_user-id]</p>
 </body>
 </html> 
