--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My Pritam Majumder</h1>
+<h1>Pritam Majumder</h1>
   <h2>Photography</h2>
 
   <p><a href="https://500px.com/pritamaj">500px profile</a> (complete photographic work) </p>
@@ -21,7 +21,7 @@
 
  <p>Uniqueness of Factorization in Quadratic Fields (Master's thesis, <a href="http://www.cse.iitk.ac.in/users/nitin/theses/majumder-2014.pdf">pdf</a>)</p>
 
-
+ <br>
  <p>[contact@google-mail: my_500px_user-id]</p>
 </body>
 </html> 
