--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
  
   <h2>Photography</h2>
 
-  <p><a href="https://500px.com/pritamaj">500px profile</a> (complete photographic work) </p>
-  <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a> (selected photos) </p>
+  <p>500px: <a href="https://500px.com/pritamaj">profile</a> (all photos), <a href=https://500px.com/p/pritamaj/galleries/selected-photos">selected photos</a>, <a href=https://500px.com/p/pritamaj?view=licensing">licensing</a> </p>
+  <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a> </p>
 
  <br>
  
