--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
   <h2>Photography</h2>
 
-  <p>500px: <a href="https://500px.com/pritamaj">profile</a> (all photos), <a href=https://500px.com/p/pritamaj/galleries/selected-photos">selected photos</a>, <a href=https://500px.com/p/pritamaj?view=licensing">licensing</a> </p>
+  <p>500px: <a href="https://500px.com/pritamaj">profile</a> (all photos), <a href="https://500px.com/p/pritamaj/galleries/selected-photos">selected photos</a>, <a href="https://500px.com/p/pritamaj?view=licensing">licensing</a> </p>
   <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a> </p>
 
  <br>
