--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <p>500px: <a href="https://500px.com/pritamaj">profile</a> (all photos), <a href="https://500px.com/p/pritamaj/galleries/selected-photos">selected photos</a>, <a href="https://500px.com/p/pritamaj?view=licensing">licensing</a> </p>
   <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a>, <a href="https://instagram.com/lastvillagestory">@lastvillagestory</a> </p>
-  <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> A collection of photos taken at the Indian Statistical Institute, Kolkata</a></p>
+  
+ <h3>Collections/Galleries (@500px):</h3>
+ <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal<\a> Photos taken at the Indian Statistical Institute, Kolkata campus</p>
  <br>
  
   <h2>Mathematics</h2>
