--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a>, <a href="https://instagram.com/lastvillagestory">@lastvillagestory</a> </p>
   
  <h3>Collections/Galleries (@500px):</h3>
- <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal<\a> Photos taken at the Indian Statistical Institute, Kolkata campus</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a> : Photos taken at the Indian Statistical Institute, Kolkata campus</p>
  <br>
  
   <h2>Mathematics</h2>
