--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a>, <a href="https://instagram.com/lastvillagestory">@lastvillagestory</a> </p>
   
  <h3>Collections/Galleries (@500px):</h3>
- <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a> : Photos taken at the Indian Statistical Institute, Kolkata campus</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a>: Photos taken at the Indian Statistical Institute (Kolkata) campus (mostly Nature and Fine-Art)</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/himalayas-ind"> ISI-cal</a>: Photos taken in the Indian himalayan region (Landscape, Nature, Rural Street)</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/western-ghats"> ISI-cal</a>: Photos taken at the western ghats region of Maharashtra (Landscape, Nature)</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/urban-street"> ISI-cal</a>: Urban Streetphotography collection</p>
+
  <br>
  
   <h2>Mathematics</h2>
