--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a>, <a href="https://instagram.com/lastvillagestory">@lastvillagestory</a> </p>
   
  <h3>Collections/Galleries (@500px):</h3>
- <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a>: Photos taken at the Indian Statistical Institute (Kolkata) campus (mostly Nature and Fine-Art)</p>
- <p><a href="https://500px.com/p/pritamaj/galleries/himalayas-ind"> ISI-cal</a>: Photos taken in the Indian himalayan region (Landscape, Nature, Rural Street)</p>
- <p><a href="https://500px.com/p/pritamaj/galleries/western-ghats"> ISI-cal</a>: Photos taken at the western ghats region of Maharashtra (Landscape, Nature)</p>
- <p><a href="https://500px.com/p/pritamaj/galleries/urban-street"> ISI-cal</a>: Urban Streetphotography collection</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a>: Photos taken at the Indian Statistical Institute (Kolkata) campus (mostly <i>Nature</i> and <i>Fine-Art</i>)</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/himalayas-ind"> himalays-ind</a>: Photos taken in the Indian Himalayan region (<i>Landscape</i>, <i>Nature</i>), <i>Rural Street</i></p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/western-ghats"> western-ghats</a>: Photos taken at the Western Ghats region of Maharashtra (<i>Landscape</i>, <i>Nature</i>)</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/urban-street"> urban-street</a>: Urban streetphotography collection</p>
 
  <br>
  
