--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
  <h3>Collections/Galleries (@500px):</h3>
  <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a>: Photos taken at the Indian Statistical Institute (Kolkata) campus (mostly <i>Nature</i> and <i>Fine-Art</i>)</p>
- <p><a href="https://500px.com/p/pritamaj/galleries/himalayas-ind"> himalays-ind</a>: Photos taken in the Indian Himalayan region (<i>Landscape</i>, <i>Nature</i>), <i>Rural Street</i></p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/himalayas-ind"> himalays-ind</a>: Photos taken in the Indian Himalayan region (<i>Rural Street</i>,<i>Landscape</i>, <i>Nature</i>)</p>
  <p><a href="https://500px.com/p/pritamaj/galleries/western-ghats"> western-ghats</a>: Photos taken at the Western Ghats region of Maharashtra (<i>Landscape</i>, <i>Nature</i>)</p>
  <p><a href="https://500px.com/p/pritamaj/galleries/urban-street"> urban-street</a>: Urban streetphotography collection</p>
 
