--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <p>500px: <a href="https://500px.com/pritamaj">profile</a> (all photos), <a href="https://500px.com/p/pritamaj/galleries/selected-photos">selected photos</a>, <a href="https://500px.com/p/pritamaj?view=licensing">licensing</a> </p>
   <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a>, <a href="https://instagram.com/lastvillagestory">@lastvillagestory</a> </p>
   
- <h3>Collections/Galleries (@500px):</h3>
+ <h3>Sme collections/galleries (@500px):</h3>
  <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a>: Photos taken at the Indian Statistical Institute (Kolkata) campus (mostly <i>Nature</i> and <i>Fine-Art</i>)</p>
- <p><a href="https://500px.com/p/pritamaj/galleries/himalayas-ind"> himalays-ind</a>: Photos taken in the Indian Himalayan region (<i>Rural Street</i>,<i>Landscape</i>, <i>Nature</i>)</p>
+ <p><a href="https://500px.com/p/pritamaj/galleries/himalayas-ind"> himalays-ind</a>: Photos taken in the Indian Himalayan region (<i>Rural Street</i>, <i>Landscape</i>, <i>Nature</i>)</p>
  <p><a href="https://500px.com/p/pritamaj/galleries/western-ghats"> western-ghats</a>: Photos taken at the Western Ghats region of Maharashtra (<i>Landscape</i>, <i>Nature</i>)</p>
  <p><a href="https://500px.com/p/pritamaj/galleries/urban-street"> urban-street</a>: Urban streetphotography collection</p>
 
