--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 
 <br>
  
+  <h2>Painting & Drawing</h2>
+
+ <p>Instagram:  <a href="https://instagram.com/abstractsupplements">@AbstractSupplements</a> </p>
+
+<br>
+ 
   <h2>Photography</h2>
 
   <p>500px: <a href="https://500px.com/pritamaj">profile</a> (all photos), <a href="https://500px.com/p/pritamaj/galleries/selected-photos">selected photos</a>, <a href="https://500px.com/p/pritamaj?view=licensing">licensing</a> </p>
-  <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a>, <a href="https://instagram.com/lastvillagestory">@lastvillagestory</a> </p>
+  <p>Instagram:  <a href="https://instagram.com/pritammajumder.in">@pritammajumder.in</a>, <a href="https://instagram.com/lastvillagestory">@LastVillageStory</a> </p>
   
  <h3>Some collections/galleries (@500px):</h3>
  <p><a href="https://500px.com/p/pritamaj/galleries/ISI-cal"> ISI-cal</a>: Photos taken at the Indian Statistical Institute (Kolkata) campus (mostly <i>Nature</i> and <i>Fine-Art</i>)</p>
