--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
   <p><a href="https://mathoverflow.net/users/23980/pritam-majumder">MathOverflow profile</a> </p>
   <h3>Research works:</h3>
+
+ <p> On crossing families of pseudoline segments and triangles (<a href="https://majumder-pritam.github.io/psline25.pdf">pdf</a> )</p>
   
- <p> Curves, points, incidences and covering (<a href="https://majumder-pritam.github.io/covering23.pdf">pdf</a>)</p>
+ <p> Curves, points, incidences and covering (<a href="https://arxiv.org/abs/2507.21758">arxiv</a>)</p>
   
  <p> An elementary proof of a power series identity for the weighted sum of all finite abelian p-groups (<a href="https://arxiv.org/abs/1407.3066">arXiv</a>)</p>
 
